--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  
   <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -67,10 +66,10 @@
 
   <footer>
     <div class="copyright">
-      &copy; 2023 Miguelano Designs | <a href="#" alt="home">Home</a>
+      &copy; 2023 Miguelano Designs 
     </div>
-    <div class="contact-info">
-      <a href="#">About</a> | <a href="#">Contact</a>
+    <div class="Legal Notices">
+      <a href="#">Privacy Notice</a> | <a href="#">Terms & Condition</a>
     </div>
   </footer>
 </body>
