--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@ h4 {
   position: relative;
   overflow: hidden;
   width: calc(33.33% - 20px); /* Three responsive squares with margin */
-  padding-top: 16px;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  border-radius: 16px;
+  padding: 16px;
+  margin: 16px;
+  border-radius: 4px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out;
   background: #d8d5f3; /* Light purple color */
@@ -129,7 +128,7 @@ footer {
 }
 
 button {
-  background-color: #ff7b25;
+  background-color: Blue;
   color: white; /* Set text color to white */
   padding: 8px 16px;
   height: 40px;
@@ -144,6 +143,7 @@ button {
 
 .login-btn,
 button {
+background-color: green;
   border-radius: 5px; /* Keep it consistent */
 }
 
@@ -204,10 +204,8 @@ h4 {
   justify-content: center;
   overflow: hidden;
   width: 100%;
-  padding-top: 16px;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  border-radius: 16px;
+  padding-top: 16px; 
+  border-radius: 4px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out;
   background: linear-gradient(45deg, #8e44ad, #9b59b6, #a349a4, #943bea);
