--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body {
 
 /* Header Styles */
 header {
-  background-color: #000; /* Black header */
+  background-color: #778899; /* Black header */
   color: white;
   padding: 10px;
   text-align: center;
@@ -231,7 +231,7 @@ footer {
   flex-direction: column; /* For smaller screens */
   justify-content: space-between;
   align-items: center;
-  background: var(--primary-color);
+ background-color: #778899; 
   color: white;
   padding: 10px;
   margin-top: 20px;
