--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+a<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -73,13 +73,15 @@ h4 {
 }
 
 .project-box img {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 16px;
+  margin: 16px;
+  padding: 16px;
 }
 
 /* Footer Styles */
