--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ button {
   height: 40px;
   width: 100px;
   border: none;
-  border-radius: 50px;
+  radius: 50px;
   font-size: 20px;
   margin: 10px;
   cursor: pointer;
