--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ button {
       <div class="project-box">
         <h3>Projects</h3>
         <p>Description of Projects</p>
-        <img src="project-image.jpg" alt="Projects Image">
+       <img src="Group1.svg" alt="Projects Image">
       </div>
 
       <div class="project-box">
