--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@ body {
 
 /* Header Styles */
 header {
-  background-color: #778899; /* Black header */
+  background-color: black;
   color: white;
-  padding: 10px;
+  padding: 0px;
   text-align: center;
 }
 
@@ -90,7 +90,7 @@ footer {
   flex-direction: column; /* For smaller screens */
   justify-content: space-between;
   align-items: center;
-  background: #000; /* Black footer */
+  background: #black; /* Black footer */
   color: white;
   padding: 10px;
   margin-top: 20px;
