--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ button {
 
 <body>
   <header>
-    <img src="QueueLogo.png" class="w3-circle" alt="Weblogo">
+    <img src="./QueueLogo" class="w3-circle" alt="Weblogo">
     <div class="w3-top">
       <div class="w3-bar w3-black">
         <a href="#home" class="w3-bar-item w3-button">Home</a>
