--- a/index.html
+++ b/index.html
@@ -1,302 +1,156 @@
-a<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Work Within Queue</title>
-  
+
   <style>
     /* Reset default style and set padding and margin to zero */
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
+    * {
+      box-sizing: border-box;
+      padding: 0;
+      margin: 0;
+    }
 
-/* White text throughout */
-body {
-  background: linear-gradient(to left, #6600cc 0%, #0099cc 100%);
-  font-family: 'Arial', sans-serif;
-  color: white; /* Set text color to white */
-}
+    /* White text throughout */
+    body {
+      background: linear-gradient(to left, #6600cc 0%, #0099cc 100%);
+      font-family: 'Arial', sans-serif;
+      color: white; /* Set text color to white */
+    }
 
-/* Header Styles */
-header {
-  background-color: black;
-  color: white;
-  padding: 0px;
-  text-align: center;
-}
-
-h1 {
-  margin: 0;
-}
-
-/* Main Section Styles */
-#main {
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 20px;
-}
-
-h3,
-h2,
-h4 {
-  margin: 5px 0;
-}
-
-/* Project Section Styles */
-.project-section {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-.project-box {
-  position: relative;
-  overflow: hidden;
-  width: calc(33.33% - 20px); /* Three responsive squares with margin */
-  padding: 16px;
-  margin: 16px;
-  border-radius: 4px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease-in-out;
-  background: #d8d5f3; /* Light purple color */
-}
-
-.project-box:hover {
-  transform: scale(1.1);
-}
-
-.project-box img {
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 16px;
-  margin: 16px;
-  padding: 16px;
-}
-
-/* Footer Styles */
-footer {
-  display: flex;
-  flex-direction: column; /* For smaller screens */
-  justify-content: space-between;
-  align-items: center;
-  background: #black; /* Black footer */
-  color: white;
-  padding: 10px;
-  margin-top: 20px;
-}
-
-.copyright,
-.contact-info {
-  margin-top: 10px;
-}
-
-/* Media Query for larger screens */
-@media only screen and (min-width: 600px) {
-  #main {
-    flex-direction: row;
-  }
-
-  article {
-    margin-right: 20px;
-  }
-
-  .nav-list {
-    text-align: left;
-  }
-
-  .project-box {
-    width: calc(33.33% - 20px);
-  }
-
-  footer {
-    flex-direction: row; /* For larger screens */
-  }
-}
-
-/* Button Styles */
-:root {
-  --primary-color: #3498db; /* Define a variable for the primary color */
-}
-
-button {
-  background-color: Blue;
-  color: white; /* Set text color to white */
-  padding: 8px 16px;
-  height: 40px;
-  width: 100px;
-  border: none;
-  radius: 50px;
-  font-size: 20px;
-  margin: 10px;
-  cursor: pointer;
-  transition: background-color 0.10s, color 0.30s;
-}
-
-.login-btn,
-button {
-background-color: green;
-  border-radius: 5px; /* Keep it consistent */
-}
-
-    /* Reset default style and set padding and margin to zero */
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-/* White text throughout */
-body {
-  background: linear-gradient(to left, #6600cc 0%, #0099cc 100%);
-  font-family: 'Arial', sans-serif;
-  color: white; /* Set text color to white */
-}
-
-/* Header Styles */
-header {
-  background-color: #878f99;
-  color: #fff;
-  padding: 10px;
-  text-align: center;
+    /* Header Styles */
+    header,
+    footer
+    {
+      height: 100%;
+      weight: 100px;
+      background-color: black;
+      color: white;
+      text-align: center;
       display: flex;
       justify-content: space-between;
-}
+      padding-top: 16px;
+      padding-left: 32px;
+      padding-right: 32px;
+       padding-bottom: 16px
+    }
 
-h1 {
-  margin: 0;
-}
+    h1 {
+      margin: 0;
+    }
 
-/* Main Section Styles */
-#main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 20px;
-}
+    /* Main Section Styles */
+    #main {
+      box-sizing: border-box;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      padding: 20px;
+    }
 
-h3,
-h2,
-h4 {
-  margin: 5px 0;
-}
+    h3,
+    h2,
+    h4 {
+      margin: 5px 0;
+    }
 
-/* Project Section Styles */
-.project-section {
-  box-sizing: border-box;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
+    /* Project Section Styles */
+    .project-section {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+    }
 
-.project-box {
-  position: relative;
-  box-sizing: border-box;
-  justify-content: center;
-  overflow: hidden;
-  width: 100%;
-  padding-top: 16px; 
-  border-radius: 4px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease-in-out;
-  background: linear-gradient(45deg, #8e44ad, #9b59b6, #a349a4, #943bea);
-}
+    .project-box {
+      position: relative;
+      overflow: hidden;
+      width: calc(33.33% - 20px); /* Three responsive squares with margin */
+      padding: 16px;
+      margin: 16px;
+      border-radius: 4px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease-in-out;
+      background: #d8d5f3; /* Light purple color */
+    }
 
-.project-box:hover {
-  transform: scale(1.1);
-}
+    .project-box:hover {
+      transform: scale(1.1);
+    }
 
-.project-box img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 16px;
-}
+    .project-box img {
+      position: relative;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 16px;
+      margin: 16px;
+      padding: 16px;
+    }
 
-/* Footer Styles */
-footer {
-  display: flex;
-  flex-direction: column; /* For smaller screens */
-  justify-content: space-between;
-  align-items: center;
- background-color: #778899; 
-  color: white;
-  padding: 10px;
-  margin-top: 20px;
-  width: Auto;
-}
+    /* Footer Styles */
+    footer {
 
-.copyright,
-.contact-info {
-  margin-top: 10px;
-}
 
-/* Media Query for larger screens */
-@media only screen and (min-width: 600px) {
-  #main {
-    flex-direction: row;
-  }
+    .copyright,
+    .contact-info {
+      margin-top: 10px;
+    }
 
-  article {
-    box-sizing: border-box;
-    margin-right: 20px;
-    justify-content: center;
-  }
+    /* Media Query for larger screens */
+    @media only screen and (min-width: 600px) {
+      #main {
+        flex-direction: row;
+      }
 
-  .nav-list {
-    text-align: left;
-  }
+      article {
+        margin-right: 20px;
+      }
 
-  .project-box {
-    width: calc(33.33% - 20px);
-  }
+      .nav-list {
+        text-align: left;
+      }
 
-  footer {
-    flex-direction: row; /* For larger screens */
-  }
-}
+      .project-box {
+        width: calc(33.33% - 20px);
+      }
 
-/* Button Styles */
-:root {
-  --primary-color: #3498db; /* Define a variable for the primary color */
-}
+      footer {
+        position: bottom-sticky;
+        flex-direction: row; /* For larger screens */
+      }
+    }
 
-button {
-  background-color: #ff7b25;
-  color: #fff;
-  padding: 8px 16px;
-  height: 40px;
-  width: 100px;
-  border: none;
-  border-radius: 50px;
-  font-size: 20px;
-  margin: 10px;
-  cursor: pointer;
-  transition: background-color 0.10s, color 0.30s;
-}
+    /* Button Styles */
+    :root {
+      --primary-color: #3498db; /* Define a variable for the primary color */
+    }
 
-.login-btn,
-button {
-  /* ... other styles ... */
-  border-radius: 5px; /* Keep it consistent */
-}
-    /* Your CSS styles go here */
+    button {
+      background-color: Blue;
+      color: white; /* Set text color to white */
+      padding: 8px 16px;
+      height: 40px;
+      width: 100px;
+      border: none;
+      border-radius: 50px;
+      font-size: 20px;
+      margin: 10px;
+      cursor: pointer;
+      transition: background-color 0.10s, color 0.30s;
+    }
+
+    .login-btn,
+    button {
+      background-color: green;
+      border-radius: 5px; /* Keep it consistent */
+    }
   </style>
-
 </head>
 
 <body>
@@ -309,22 +163,22 @@ button {
         <a href="#contact" class="w3-bar-item w3-button">Contact</a>
       </div>
     </div>
- <button class="login-btn" onclick="redirectToGoogleAuthentication()">Login</button>
+    <button class="login-btn" onclick="redirectToGoogleAuthentication()">Login</button>
   </header>
   <div class="main-container">
-    
-      <div class="article-content">
-        <h3>A Webfolio of Projects and Programs</h3>
-        <p>By Michael Que</p>
-        <p>San Francisco, California</p>
-        <button>Profile</button>
-      </div>
+
+    <div class="article-content">
+      <h3>A Webfolio of Projects and Programs</h3>
+      <p>By Michael Que</p>
+      <p>San Francisco, California</p>
+      <button>Profile</button>
+    </div>
 
     <div class="project-section">
       <div class="project-box">
         <h3>Projects</h3>
         <p>Description of Projects</p>
-       <img src="Group1.svg" alt="Projects Image">
+        <img src="Group1.svg" alt="Projects Image">
       </div>
 
       <div class="project-box">
@@ -338,8 +192,6 @@ button {
         <p>Description of Consulting</p>
         <img src="consulting-image.jpg" alt="Consulting Image">
       </div>
-    </div>roject boxes go here -->
-
     </div>
 
     <section>
