--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       background: linear-gradient(to left, #6600cc 0%, #0099cc 100%);
       font-family: 'Arial', sans-serif;
       color: white; /* Set text color to white */
+       text-align: center;
     }
 
     /* Header Styles */
@@ -194,14 +195,12 @@
       </div>
     </div>
 
-    <section>
-      <h2>Section</h2>
+    <section class="responsive-container">
       <div>
-        <h3>Section Title</h3>
-        <p>Section content goes here.</p>
+        <img src="./animation.png" alt="AnimateFrontPage">
       </div>
     </section>
-  </div>
+ 
 
   <footer>
     <div class="copyright">
