--- a/index.html
+++ b/index.html
@@ -179,19 +179,19 @@
       <div class="project-box">
         <h3>Projects</h3>
         <p>Description of Projects</p>
-        <img src="Group1.svg" alt="Projects Image">
+        <img src="./FolderIcon.png" alt="Projects Image">
       </div>
 
       <div class="project-box">
         <h3>The Online Book Store</h3>
         <p>Description of The Online Book Store</p>
-        <img src="bookstore-image.jpg" alt="Book Store Image">
+        <img src="./ShoppingBagsIcon.png" alt="Book Store Image">
       </div>
 
       <div class="project-box">
         <h3>Consulting</h3>
         <p>Description of Consulting</p>
-        <img src="consulting-image.jpg" alt="Consulting Image">
+        <img src="./BizIcon.png" alt="Consulting Image">
       </div>
     </div>
 
