--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
       position: relative;
       top: 0;
       left: 0;
-      width: 100px;
-      height: 100px;
+      width: auto;
+      height: auto;
       object-fit: cover;
       border-radius: 16px;
       margin: 16px;
