--- a/index.html
+++ b/index.html
@@ -179,29 +179,28 @@
       <div class="project-box">
         <h3>Projects</h3>
         <p>Description of Projects</p>
-        <img src="./FolderIcon.png" alt="Projects Image">
+        <img src="./FolderIcon.png" alt="Projects Image" style="max-width:100%;height:auto">
       </div>
 
       <div class="project-box">
         <h3>The Online Book Store</h3>
         <p>Description of The Online Book Store</p>
-        <img src="./ShoppingBagsIcon.png" alt="Book Store Image">
+        <img src="./ShoppingBagsIcon.png" alt="Book Store Image style="max-width:100%;height:auto">
       </div>
 
       <div class="project-box">
         <h3>Consulting</h3>
         <p>Description of Consulting</p>
-        <img src="./BizIcon.png" alt="Consulting Image">
+        <img src="./BizIcon.png" alt="Consulting Image"  style="max-width:100%;height:auto">
       </div>
     </div>
 
-    <section class="responsive-container">
+    <aside class="responsive-container">
       <div>
         <img src="./animation.png" alt="AnimateFrontPage">
       </div>
-    </section>
+    </aside>
  
-
   <footer>
     <div class="copyright">
       &copy; 2023 Miguelano Designs | <a href="#" alt="home">Home</a>
