--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     }
 
     .project-box img {
-      position: relative;
+      position: wrap;
       top: 0;
       left: 0;
       width: auto;
