--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
 <body>
   <header>
-    <img src="./QueueLogo" class="w3-circle" alt="Weblogo">
+    <img src="./QueueLogo" class="w3-circle" alt="Weblogo">The Work Within Queue</image>
     <div class="w3-top">
       <div class="w3-bar w3-black">
         <a href="#home" class="w3-bar-item w3-button">Home</a>
