--- a/index.html
+++ b/index.html
@@ -203,19 +203,19 @@
       <div class="project-box">
         <h3>Projects</h3>
         <p>Description of Projects</p>
-        <img src="./FolderIcon.png" alt="Projects Image" style="max-width:100%;height:auto">
+        <img src="./FolderIcon.png" alt="Projects Image">
       </div>
 
       <div class="project-box">
         <h3>The Online Book Store</h3>
         <p>Description of The Online Book Store</p>
-        <img src="./ShoppingBagsIcon.png" alt="Book Store Image style="max-width:100%;height:auto">
+        <img src="./ShoppingBagsIcon.png" alt="Book Store Image">
       </div>
 
       <div class="project-box">
         <h3>Consulting</h3>
         <p>Description of Consulting</p>
-        <img src="./BizIcon.png" alt="Consulting Image"  style="max-width:100%;height:auto">
+        <img src="./BizIcon.png" alt="Consulting Image">
       </div>
     </div>
 
