--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     /* White text throughout */
     body {
       background: linear-gradient(to left, #6600cc 0%, #0099cc 100%);
-      font-family: 'Arial', sans-serif;
+      font-family: 'Lato', sans-serif;
       color: white; /* Set text color to white */
        text-align: center;
     }
@@ -36,7 +36,7 @@
       padding-top: 16px;
       padding-left: 32px;
       padding-right: 32px;
-       padding-bottom: 16px
+      padding-bottom: 16px
     }
 
     h1 {
