--- a/index.html
+++ b/index.html
@@ -186,9 +186,10 @@
         <a href="#about" class="w3-bar-item w3-button">About</a>
         <a href="#contact" class="w3-bar-item w3-button">Contact</a>
       </div>
-    </div>
+    <div>
     <button class="login-btn" onclick="redirectToGoogleAuthentication()">Login</button>
-  </header>
+    </div>div>
+    </header>
   <div class="main-container">
 
     <div class="article-content">
