--- a/index.html
+++ b/index.html
@@ -188,8 +188,9 @@
       </div>
     <div>
     <button class="login-btn" onclick="redirectToGoogleAuthentication()">Login</button>
-    </div>div>
+    </div>
     </header>
+  
   <div class="main-container">
 
     <div class="article-content">
