--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>The Work Within Queue</title>
 
 </head>
+  <body>
+    <style>
   <header>
     <img src="./QueueLogo" class="w3-circle" alt="Weblogo"></image>
     <div class="w3-top">
@@ -61,6 +63,7 @@
       <a href="#">About</a> | <a href="#">Contact</a>
     </div>
   </footer>
+      </style>
 </body>
 
 </html>
