--- a/index.html
+++ b/index.html
@@ -4,30 +4,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <style href="style.css">
+  <link rel="stylesheet" href="style.css">
   <title>The Work Within Queue</title>
-
 </head>
-  <body>
-    <style>
+
+<body>
+
   <header>
-    <img src="./QueueLogo" class="w3-circle" alt="Weblogo"></image>
+    <img src="./QueueLogo" class="w3-circle" alt="Weblogo">
     <div class="w3-top">
       <div class="w3-bar w3-black">
         <a href="#home" class="w3-bar-item w3-button">Home</a>
         <a href="#about" class="w3-bar-item w3-button">About</a>
         <a href="#contact" class="w3-bar-item w3-button">Contact</a>
-    <button class="login-btn" onclick="redirectToGoogleAuthentication()">Login</button>
+        <button class="login-btn" onclick="redirectToGoogleAuthentication()">Login</button>
+      </div>
     </div>
-    </header>
-  
-  <div class="main-container">
+  </header>
 
+  <div class="main-container">
     <div class="article-content">
       <h3>A Webfolio of Projects and Programs</h3>
       <p>By Michael Que</p>
       <p>San Francisco, California</p>
-    <a href="#" class="btn btn-secondary">Profile</a>
+      <a href="#" class="btn btn-secondary">Profile</a>
+    </div>
 
     <div class="project-section">
       <div class="project-box">
@@ -54,7 +55,8 @@
         <img src="./animation.png" alt="AnimateFrontPage">
       </div>
     </aside>
- 
+  </div>
+
   <footer>
     <div class="copyright">
       &copy; 2023 Miguelano Designs | <a href="#" alt="home">Home</a>
@@ -63,7 +65,7 @@
       <a href="#">About</a> | <a href="#">Contact</a>
     </div>
   </footer>
-      </style>
+
 </body>
 
 </html>
