--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <!-- Link to the custom CSS file -->
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+
   <!-- Header section -->
   <header id="header">
     <!-- Logo on the left -->
     <div class="logo">
-      <img src="logo.png" alt="Logo" class="logo-image">
+      <img src="QueueLogo.png" alt="Logo" class="logo-image">
     </div>
     <!-- Navigation tabs in the middle -->
     <nav class="nav">
@@ -31,26 +31,27 @@
       <button class="login-button">Login</button>
     </div>
   </header>
+  <body>
   <!-- Main section -->
   <main id="main">
     <!-- Menu section with four containers -->
     <section id="menu">
       <!-- Container 1 -->
       <div class="container">
-        <div class="title">Title 1</div>
-        <img src="image1.jpg" alt="Image 1" class="image">
+        <div class="Projects">Projects</div>
+        <img src="FolderIcon.png" alt="FolderIcon" class="image">
         <div class="description">Description 1</div>
       </div>
       <!-- Container 2 -->
       <div class="container">
-        <div class="title">Title 2</div>
-        <img src="image2.jpg" alt="Image 2" class="image">
+        <div class="Consulting">Title 2</div>
+        <img src="BizIcon.png" alt="BizIcon" class="image">
         <div class="description">Description 2</div>
       </div>
       <!-- Container 3 -->
       <div class="container">
-        <div class="title">Title 3</div>
-        <img src="image3.jpg" alt="Image 3" class="image">
+        <div class="eBookstore">Title 3</div>
+        <img src="ShoppingBagsIcon.png" alt="ShoppingBagsIcon.png" class="image">
         <div class="description">Description 3</div>
       </div>
       <!-- Container 4 -->
@@ -74,6 +75,7 @@
       <span id="close">×</span>
     </section>
   </main>
+    </body>
   <!-- Footer section -->
   <footer id="footer">
     <!-- Responsive container -->
@@ -93,5 +95,5 @@
   </footer>
   <!-- Link to the custom JavaScript file -->
   <script src="script.js"></script>
-</body>
+
 </html>
