--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
   <link rel="stylesheet" href="style.css">
   <title>The Work Within Queue</title>
 
-
-
-
-  <header>
-    <img src="./QueueLogo" class="w3-circle" alt="Weblogo">
-    <div class="w3-top">
-      <div class="w3-bar w3-black">
-        <a href="#home" class="w3-bar-item w3-button">Home</a>
-        <a href="#about" class="w3-bar-item w3-button">About</a>
-        <a href="#contact" class="w3-bar-item w3-button">Contact</a>
-          <div class="login">
+  <!-- Header section -->
+  <header id="header">
+    <!-- Logo on the left -->
+    <div class="logo">
+      <img src="QueueLogo.png" alt="Logo" class="logo-image">
+    </div>
+    <!-- Navigation tabs in the middle -->
+      <nav class="nav-tab">
+     <a href="#" class="nav-link">Home</a>
+    <a href="#" class="nav-link">About</a>
+   >a href="#" class="nav-link">Contact</a>
+    </nav>
+    <!-- Icon and login button on the right -->
+    <div class="login">
       <i class="fas fa-user-circle icon"></i>
       <button class="login-button">Login</button>
-    </div>
-      </div>
     </div>
   </header>
 </head>
@@ -71,7 +72,7 @@
   <!-- Footer section -->
     <aside class="responsive-container">
       <div>
-        <img src="./animation.png" alt="AnimateFrontPage">
+        <img src="./animation.svg" alt="AnimateFrontPage">
       </div>
     </aside>
   </div>
