--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav class="nav-tab">
      <a href="#" class="nav-link">Home</a>
     <a href="#" class="nav-link">About</a>
-   >a href="#" class="nav-link">Contact</a>
+   <a href="#" class="nav-link">Contact</a>
     </nav>
     <!-- Icon and login button on the right -->
     <div class="login">
@@ -79,8 +79,7 @@
 
   <footer>
     <div class="copyright">
-      &copy; 2023 Miguelano Designs | <a href="#" alt="home">Home</a>
-    </div>
+      &copy; 2023 Miguelano Designs</div>
     <div class="contact-info">
       <a href="#">About</a> | <a href="#">Contact</a>
     </div>
