--- a/index.html
+++ b/index.html
@@ -78,11 +78,8 @@
   </div>
 
   <footer>
-    <div class="copyright">
-      &copy; 2023 Miguelano Designs</div>
-    <div class="contact-info">
+      <div>&copy; 2023 Miguelano Designs</div>
       <a href="#">About</a> | <a href="#">Contact</a>
-    </div>
   </footer>
 
 </body>
