--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
     <section id="menu">
       <!-- Container 1 -->
       <div class="container">
-        <div class="title">Title 1</div>
-        <img src="image1.jpg" alt="Image 1" class="image">
+        <div class="Projects">Title 1</div>
+        <img src="FolderIcon.png" alt="FolderIcon.png" class="image">
         <div class="description">Description 1</div>
       </div>
       <!-- Container 2 -->
       <div class="container">
-        <div class="title">Title 2</div>
-        <img src="image2.jpg" alt="Image 2" class="image">
+        <div class="Consulting">Title 2</div>
+        <img src="BizIcon.png" alt="BizIcon.png" class="image">
         <div class="description">Description 2</div>
       </div>
       <!-- Container 3 -->
       <div class="container">
-        <div class="title">Title 3</div>
-        <img src="image3.jpg" alt="Image 3" class="image">
+        <div class="eBookstore">Title 3</div>
+        <img src="ShoppingBagsIcon.png" alt="ShoppingBagsIcon.png" class="image">
         <div class="description">Description 3</div>
       </div>
       <!-- Container 4 -->
@@ -55,7 +55,7 @@
         <!-- Two buttons -->
         <div class="buttons">
           <!-- Button 1 links to a Linkedin page -->
-          <a href="https://www.linkedin.com/in/your-name/" class="button">Linkedin</a>
+          <a href="https://www.linkedin.com/in/michaelcque/" class="button">Linkedin</a>
           <!-- Button 2 opens an overlay of pdf document -->
           <button class="button" id="open">Resume</button>
         </div>
@@ -70,12 +70,9 @@
     </section>
   </main>
   <!-- Footer section -->
-    <aside class="responsive-container">
-      <div>
-        <img src="./animation.svg" alt="AnimateFrontPage">
+    <div class="container">
+        <img src="ProjMgmt.png" alt="Project Management" class="image">
       </div>
-    </aside>
-  </div>
 
   <footer>
       <div>&copy; 2023 Miguelano Designs</div>
